--- a/quiz/04-1/index.html
+++ b/quiz/04-1/index.html
@@ -19,6 +19,10 @@
 			var Header = { template: '<div>This is Header</div>' };
 			var Footer = { template: '<div>This is Footer</div>' };
 
+			var LoginBody = { template: '<div>This is LoginBody</div>' };
+			var LoginHeader = { template: '<div>This is LoginHeader</div>' };
+			var LoginFooter = { template: '<div>This is LoginFooter</div>' };
+
 			// 실습 #2 - LoginHeader, LoginBody, LoginFooter 컴포넌트 내용을 정의해보세요.
 
 			var router = new VueRouter({
@@ -32,7 +36,14 @@
 						}
 					},
 					// 실습 #1 - '/login' url을 추가하고, LoginHeader, LoginBody, LoginFooter 컴포넌트를 추가해보세요.
-
+					{
+						path: '/login',
+						components: {
+							default: LoginBody,
+							header: LoginHeader,
+							footer: LoginFooter
+						}
+					}
 				]
 			});
 
