--- a/project06/index.html
+++ b/project06/index.html
@@ -11,6 +11,8 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="./dist/build.js"></script>
+    <script src="/dist/build.js"></script>
+    <!-- 최종 컴파일시 수정하기 -->
+    <!-- <script src="./dist/build.js"></script> -->
   </body>
 </html>
